# pdfsigner-rs

./: .gitattributes  Cargo.toml  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: certificado-a1.pfx  index.spec.ts
src/: certificate.rs  error.rs  lib.rs  pdfsigner.rs  signature_config.rs  utils.rs
