
[package]
authors = ["AaronKing <aaron.cmfor@gmail.com>"]
edition = "2021"
name = "pdfsigner_rs"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
chrono = "0.4"
base64 = "0.22"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
x509-parser = "0.16"
der-parser = "9.0"
pkcs8 = { version = "0.10", features = ["pem", "pkcs5", "encryption"] }
p12 = "0.6"
sha1 = "0.10"
des = "0.7"
block-modes = "0.9"
rand = "0.8"
signature = "2.2"
cms = "0.2"
const-oid = "0.9"
der = { version = "0.7", features = ["alloc", "derive"] }
x509-cert = "0.2"
openssl-sys = { version = "0.9", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1           # Single codegen unit for better optimization
lto = "fat"                 # Full LTO for maximum speed
opt-level = 3               # Maximum optimization
overflow-checks = false     # Disable overflow checks for speed
panic = "abort"             # Smaller and faster panic handler
strip = "symbols"           # Strip symbols to reduce binary size

[profile.release.package."*"]
opt-level = 3               # Optimize all dependencies too

[profile.dev]
opt-level = 0               # No optimization for faster compilation
debug = true                # Include debug info
